docs-archive/apache-airflow-providers-common-ai/0.9.0/_sources/_api/airflow/providers/common/ai/operators/document_loader/index.rst.txt
airflow.providers.common.ai.operators.document_loader
=====================================================

.. py:module:: airflow.providers.common.ai.operators.document_loader


Attributes
----------

.. autoapisummary::

   airflow.providers.common.ai.operators.document_loader.FilePathT


Classes
-------

.. autoapisummary::

   airflow.providers.common.ai.operators.document_loader.DocumentLoaderOperator


Module Contents
---------------

.. py:data:: FilePathT

.. py:class:: DocumentLoaderOperator(*, source_path = None, source_conn_id = None, source_bytes = None, file_type = None, parser = 'auto', file_extensions = None, metadata_fields = None, encoding = 'utf-8', encoding_errors = 'strict', json_text_field = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Parse files into ``list[dict(text, metadata)]`` for downstream embedding.

   Bridges Airflow's connectivity layer (hooks that produce bytes or local
   files) and the AI embedding layer (operators that need structured text
   with metadata). Framework-agnostic: no LlamaIndex, LangChain, or other
   AI framework dependency.

   Built-in parsers handle ``.txt``, ``.md``, ``.csv``, and ``.json`` with
   zero extra dependencies. PDF and DOCX support require optional packages
   installable via extras::

       pip install apache-airflow-providers-common-ai[pdf]    # pypdf
       pip install apache-airflow-providers-common-ai[docx]   # python-docx

   Provide exactly one of ``source_path`` or ``source_bytes``. When using
   ``source_bytes``, ``file_type`` is required so the operator knows which
   parser to use.

   The operator is intentionally a **loader**: it does not split documents
   into fixed-size chunks. Pass the output to a downstream text-splitter or
   embedding operator if you need chunking.

   :param source_path: A local path, glob pattern, or storage URI
       (``s3://``, ``gs://``, ``azure://``, ``file://``, ...). Cloud URIs
       go through :class:`~airflow.sdk.ObjectStoragePath` / fsspec.
       ``**`` enables recursive matching, for both local paths and cloud
       URIs. Wildcards must not appear in the scheme or bucket segment
       of a cloud URI.
   :param source_conn_id: Airflow connection ID used by
       ``ObjectStoragePath`` for cloud URIs (``aws_default``,
       ``google_cloud_default``, ...). Ignored for local paths.
   :param source_bytes: Raw file bytes, typically from XCom.
   :param file_type: File extension hint when using ``source_bytes``
       (e.g. ``".pdf"``). Also accepted with ``source_path`` to override
       auto-detection.
   :param parser: Parsing backend selection. ``"auto"`` (default) picks the
       backend from the file extension.
   :param file_extensions: When ``source_path`` is a directory or glob,
       only process files whose extension is in this list. When omitted,
       the operator processes only files whose extension is known to the
       built-in dispatch (others are skipped with a warning) and silently
       ignores files whose name starts with a dot.
   :param metadata_fields: Extra key-value pairs merged into every
       document's ``metadata`` dict. Auto-extracted fields such as
       ``file_name``, ``file_path``, ``row_index``, ``item_index``, and
       ``page_number`` take precedence over keys with the same name.
   :param encoding: Text encoding used for ``.txt``/``.md``/``.csv``/``.json``
       and for the bytes path. Defaults to ``"utf-8"``.
   :param encoding_errors: How decode errors are handled. Defaults to
       ``"strict"``; set to ``"replace"`` or ``"ignore"`` to tolerate
       mixed-encoding inputs at the cost of some character loss.
   :param json_text_field: When parsing JSON, treat this key as the
       embedding text and put every other key into ``metadata``. Applies
       to each item when the top-level JSON is a list, or to the object
       when it is a single dict. When ``None`` (default), the operator
       flattens dicts into ``"k: v, k: v"`` text (same shape as the CSV
       parser).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('source_path', 'source_conn_id', 'file_type', 'file_extensions', 'parser', 'metadata_fields')



   .. py:attribute:: EXTENSION_BACKEND_MAP
      :type:  dict[str, str]


   .. py:attribute:: source_path
      :value: None



   .. py:attribute:: source_conn_id
      :value: None



   .. py:attribute:: source_bytes
      :value: None



   .. py:attribute:: file_type
      :value: None



   .. py:attribute:: parser
      :value: 'auto'



   .. py:attribute:: file_extensions
      :value: None



   .. py:attribute:: metadata_fields
      :value: None



   .. py:attribute:: encoding
      :value: 'utf-8'



   .. py:attribute:: encoding_errors
      :value: 'strict'



   .. py:attribute:: json_text_field
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



